--- a/less/style.less
+++ b/less/style.less
@@ -553,12 +553,6 @@ a.block-link {
     margin-bottom:0;
   }
 
-  &:hover {
-    box-shadow: 0px 0px 3px @cr-darkest;
-    //border-color:@cr-highlight;
-    cursor:pointer;
-  }
-
   .card-row {
     display:flex;
     min-width:100%;
@@ -583,9 +577,17 @@ a.block-link {
     align-items: center;
     justify-content: center;
 
+    a {
+      text-decoration: none;
+    }
+
     .case-payment {
 
       margin-bottom: 20px;
+
+      &:hover{
+        cursor:pointer;
+      }
   
       h2 {
         color:@cr-lightest;
@@ -605,10 +607,10 @@ a.block-link {
       font-family:@cr-regular;
       font-size: .8em;
       font-weight: 700;
-      margin: 0;
-      position:absolute;
-      bottom:20px;
-      left:20px;
+      // margin: 0;
+      // position:absolute;
+      // bottom:20px;
+      // left:20px;
     }
   }
 
@@ -621,6 +623,14 @@ a.block-link {
   .case-summary {
     margin-top:12px; //20px minus 8px from case-details li
     margin-bottom:8px;
+
+    a {
+      text-decoration:none;
+      color:lighten(@cr-darkest,20%);
+      &:hover{
+        cursor:pointer;
+      }
+    }
   }
 
   .case-details {
@@ -1137,6 +1147,84 @@ a:hover {
   }
 }
 
+.social-icons {
+  display:block;
+  margin-top:1em;
+}
+.share {
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  margin:.5em;
+  transition: background-color .25s ease-in-out;
+  -moz-transition: background-color .25s ease-in-out;
+  -webkit-transition: background-color .25s ease-in-out;
+  &:hover {
+    cursor:pointer;
+  }
+}
+#cpd-scrolling .social-icons {
+  font-size:.333em;
+}
+#cpd-scrolling .share {
+  background-color: fade(@cr-lightest,30%);
+  text-align: center;
+  padding-top: .45em;
+  border-radius: 1em;
+  &:hover {
+    background-color: @cr-lightest;
+  }
+}
+.icon-twitter:before {
+  content: '\68';
+  text-shadow:none;
+}
+.icon-facebook:before {
+  content: '\70';
+  padding-left:.25em;
+  text-shadow:none;
+}
+.icon-mail:before {
+  content: '\75';
+  padding-left:.1em;
+  text-shadow:none;
+}
+[class*=" icon-"]:before, [class^=icon-]:before {
+  font-family: fontello;
+  font-style: normal;
+  font-weight: 400;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  opacity: 1;
+  text-transform: none!important;
+}
+
+.case-payment-wrapper {
+  .social-icons {
+    margin: 20px 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .share {
+    margin: 0 .25em;
+    width:auto;
+    height:auto;
+    opacity:.8;
+    &:hover {
+      opacity:1;
+    }
+  }
+  .icon-twitter {
+    font-size:.8em;
+  }
+}
+
 /* ==========================================================================
 Intro Page
 ========================================================================== */
@@ -1417,56 +1505,7 @@ Intro Page
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
   }
 
-  .social-icons {
-    display:block;
-    margin-top:1em;
-    font-size:.333em;
-  }
-  .share {
-    display: inline-block;
-    width: 2em;
-    height: 2em;
-    background-color: fade(@cr-lightest,30%);
-    text-align: center;
-    padding-top: .45em;
-    border-radius: 1em;
-    margin:.5em;
-    transition: background-color .25s ease-in-out;
-    -moz-transition: background-color .25s ease-in-out;
-    -webkit-transition: background-color .25s ease-in-out;
-
-    &:hover {
-      background-color: @cr-lightest;
-    }
-  }
-  .icon-twitter:before {
-    content: '\68';
-    text-shadow:none;
-  }
-  .icon-facebook:before {
-    content: '\70';
-    padding-left:.25em;
-    text-shadow:none;
-  }
-  .icon-mail:before {
-    content: '\75';
-    padding-left:.1em;
-    text-shadow:none;
-  }
-
-  [class*=" icon-"]:before, [class^=icon-]:before {
-    font-family: fontello;
-    font-style: normal;
-    font-weight: 400;
-    speak: none;
-    display: inline-block;
-    text-decoration: inherit;
-    width: 1em;
-    margin-right: .2em;
-    text-align: center;
-    opacity: 1;
-    text-transform: none!important;
-  }
+  
 
   /*
     Elements
@@ -1670,9 +1709,16 @@ Media Queries
     margin-bottom:0;
   }
   .case .case-payment-wrapper h4 {
-    bottom:20px;
-    right:20px;
-    left:auto;
+    // bottom:20px;
+    // right:20px;
+    // left:auto;
+  }
+  .case .case-payment-wrapper .social-icons {
+    margin:0;
+    bottom: auto;
+    left: auto;
+    right: 20px;
+    top: 20px;
   }
   .case .case-details li {
     width: 100%;
