--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -1,5 +1,7 @@
 <script type="text/javascript">
   var site_path = '{{ site_path }}';
+
+  
 </script>
 
 {% if BUILD_PATH %}
@@ -11,14 +13,21 @@
 {% endif %}
 
 <script type="text/template" id="case-tmpl">
-    <div class="case" data-case_number="<%= model.case_number %>" data-total_payments="<%= model.total_payments %>" data-date_of_incident="<%= model.date_of_incident %>" onclick="location.href='<%= site_path %>case/<%= model.slug %>'">
+    <div class="case" data-case_number="<%= model.case_number %>" data-total_payments="<%= model.total_payments %>" data-date_of_incident="<%= model.date_of_incident %>">
       <div class="card-row">
         <div class="case-payment-wrapper">
-          <h4><%= model.case_number %></h4>
-          <div class="case-payment">
-            <h2>$<%= Number(model.total_payments).formatMoney(0) %></h2>
-            <h3><%= model.primary_cause %></h3>
-          </div>
+          <a class="case-link" href="<%= site_path %>case/<%= model.slug %>">
+            <div class="case-payment">
+              <h4><%= model.case_number %></h4>
+              <h2>$<%= Number(model.total_payments).formatMoney(0) %></h2>
+              <h3><%= model.primary_cause %></h3>
+            </div>
+          </a>
+          <span class="social-icons">
+            <a><span class="share icon-twitter" onclick="case_twitter(this)"></span></a>
+            <a><span class="share icon-facebook" onclick="case_facebook(this)"></span></a>
+            <a target="_blank" href="mailto:?subject=This police settlement cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/case/<%= model.slug %>"><span class="share icon-mail"></span></a>
+          </span>
         </div>
 
         <div class="case-description">
@@ -35,8 +44,10 @@
 
           <% if (model.narrative !== 'NULL') { %>
           <div class="case-summary">
-            <span class="card-label">Case summary: </span>
-            <p><%= this.formatStr(model.narrative) %></p>
+            <a href="<%= site_path %>case/<%= model.slug %>">
+              <span class="card-label">Case summary: </span>
+              <p><%= this.formatStr(model.narrative) %></p>
+            </a>
           </div>
           <%  } %>
 
@@ -61,10 +72,15 @@
 <div class="officer" data-slug="<%= model.slug %>">
   <div class="officer-logo"></div>
   <div class="officer-text">
-    <h2><a href="<%= site_path %>officer/<%= model.slug %>"><%= model.first %> <%= model.last %></a></h2>
+    <h2><a class="officer-link" href="<%= site_path %>officer/<%= model.slug %>"><%= model.first %> <%= model.last %></a></h2>
     <h3><%= model.prefix %></h3>
     <div class="ids"><span class="badge-num"><%= model.badge_number %></span><span class="slug"><%= model.slug %></span></div>
     <div class="total-payments-container"><span class="total-payments">$<%= Number(model.total_payments).formatMoney(0) %></span> <span>total payments<!--  for all related cases --></span></div>
+    <span class="social-icons">
+      <a><span class="share icon-twitter" onclick="officer_twitter(this)"></span></a>
+      <a><span class="share icon-facebook" onclick="officer_facebook(this)"></span></a>
+      <a target="_blank" href="mailto:?subject=<%= model.first %> <%= model.last %> was named in police settlements that cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/officer/<%= model.slug %>"><span class="share icon-mail"></span></a>
+    </span>
   </div>
 </div>
 </script>
